attempt to fix height on mobile screen

--- a/src/components/Wall/styles.scss
+++ b/src/components/Wall/styles.scss
@@ -3,7 +3,7 @@
     flex-direction: column;
     align-items: center;
     justify-content: flex-end;
-    height: 100%;
+    height: 100vh;
     width: 100vw;
     position: relative;
     margin: 0;
@@ -45,7 +45,7 @@
     padding: 2rem;
     text-align: center;
     text-transform: uppercase;
-    position: absolute;
+    position: fixed;
     bottom: 0;
     box-sizing: border-box;
 
